--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Noto Sans', sans-serif;
-    background: #282c34 url('https://i.imgur.com/lnQm0RN.jpeg') no-repeat center/cover fixed;
+    background-color: #282c34;
     color: #fff;
     margin: 0;
     padding: 0;
@@ -9,6 +9,11 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
+    background-image: url('https://i.imgur.com/lnQm0RN.jpeg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     min-height: 100vh;
     position: relative;
 }
@@ -51,6 +56,7 @@ input[type="email"] {
     padding: 10px;
     font-size: 1em;
     margin-right: 10px;
+    border: none;
     border-radius: 5px;
 }
 
@@ -59,6 +65,7 @@ button {
     font-size: 1em;
     background-color: #9b59b6;
     color: white;
+    border: none;
     border-radius: 5px;
     cursor: pointer;
 }
@@ -82,8 +89,19 @@ footer a:hover {
 }
 
 @media (max-width: 600px) {
-    h1 { font-size: 2.5em; }
-    p { font-size: 1em; }
-    form { flex-direction: column; }
-    input[type="email"] { margin-bottom: 10px; }
+    h1 {
+        font-size: 2.5em;
+    }
+
+    p {
+        font-size: 1em;
+    }
+
+    form {
+        flex-direction: column;
+    }
+
+    input[type="email"] {
+        margin-bottom: 10px;
+    }
 }
